

add_executable(test1.connection test1.connection.cpp)
add_executable(test2.ping test2.ping.cpp)
add_executable(test3.create_table test3.create_table.cpp)
add_executable(test4.insert test4.insert.cpp)
add_executable(test5.select test5.select.cpp)
add_executable(test6.update test6.update.cpp)
add_executable(test7.prepare_query test7.prepare_query.cpp)
add_executable(test8.close test8.close.cpp)
add_executable(test9.connection_pool test9.connection_pool.cpp)

